// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render negative message when errorMessage is not blank 1`] = `
<div>
  <div
    className="ui error fluid input"
    style={
      Object {
        "marginBottom": "10px",
        "marginTop": "10px",
      }
    }
  >
    <input
      disabled={undefined}
      onChange={[Function]}
      placeholder="5339-35-97.5339-35-98.5339-35-99"
      tabIndex={undefined}
      type="text"
      value="5"
    />
  </div>
  <div
    className="ui negative message"
  >
    <div
      className="header"
    >
      Waffle Map Error
    </div>
    <p>
      It seems there was something wrong ...
    </p>
  </div>
  <div
    aria-busy={undefined}
    aria-disabled={undefined}
    aria-expanded={false}
    aria-multiselectable={undefined}
    className="ui fluid dropdown"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    role="listbox"
    style={
      Object {
        "marginBottom": "10px",
        "marginTop": "10px",
      }
    }
    tabIndex={0}
  >
    <div
      aria-live="polite"
      className="text"
      role="alert"
    >
      Split with dots
    </div>
    <i
      aria-hidden="true"
      className="dropdown icon"
      onClick={[Function]}
    />
    <div
      className="menu transition"
    >
      <div
        aria-checked={false}
        aria-disabled={undefined}
        aria-selected={false}
        className="item"
        onClick={[Function]}
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <span
          className="text"
        >
          commas
        </span>
      </div>
      <div
        aria-checked={true}
        aria-disabled={undefined}
        aria-selected={true}
        className="active selected item"
        onClick={[Function]}
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <span
          className="text"
        >
          dots
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Should set props to MeshCodeInput 1`] = `
<div>
  <div
    className="ui fluid input"
    style={
      Object {
        "marginBottom": "10px",
        "marginTop": "10px",
      }
    }
  >
    <input
      disabled={undefined}
      onChange={[Function]}
      placeholder="5339-35-97.5339-35-98.5339-35-99"
      tabIndex={undefined}
      type="text"
      value=""
    />
  </div>
  <div
    aria-busy={undefined}
    aria-disabled={undefined}
    aria-expanded={false}
    aria-multiselectable={undefined}
    className="ui fluid dropdown"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    role="listbox"
    style={
      Object {
        "marginBottom": "10px",
        "marginTop": "10px",
      }
    }
    tabIndex={0}
  >
    <div
      aria-live="polite"
      className="text"
      role="alert"
    >
      Split with dots
    </div>
    <i
      aria-hidden="true"
      className="dropdown icon"
      onClick={[Function]}
    />
    <div
      className="menu transition"
    >
      <div
        aria-checked={false}
        aria-disabled={undefined}
        aria-selected={false}
        className="item"
        onClick={[Function]}
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <span
          className="text"
        >
          commas
        </span>
      </div>
      <div
        aria-checked={true}
        aria-disabled={undefined}
        aria-selected={true}
        className="active selected item"
        onClick={[Function]}
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <span
          className="text"
        >
          dots
        </span>
      </div>
    </div>
  </div>
</div>
`;
